# datagen

./: .codacy.yml  .deepsource.toml  .dockerignore  .gitignore  .prettierrc.json  Dockerfile  Pipfile  README.md  analyze_parquet.py  check_original_parquet.py  debug_local_produce.py  debug_nazare_code.py  debug_produce_file_full.py  dockerfile  pyproject.toml  pytest.ini  requirements.txt  test_fixed_schema.py  test_nazare_fixed_schema.py  test_nazare_fixes.py  test_string_generation.py
.github/: dependabot.yml
.github/workflows/: apisec-scan.yml  bandit.yml  black.yml  codacy.yml  codeql.yml  datagen.dockerfiles.yaml  dockerfiles.yaml  dockerfiles_dev.yaml  jobs.yaml  jobs_dev.yaml  pylint.yml  pyright.yml  ruff.yml  semgrep.yml  snyk-code.yml  snyk-container.yml  snyk-python.yml  sonarcloud.yml
samples/: README.md  edge-schema.json  edge.jsonl  fake.bsonl  fake.csv  fake.json  fake.jsonl  fake.parquet  fake.schema.csv  loop.csv  one.csv  one.json
samples/schema/: fake.json
samples/test/: edge.jsonl  fake.bson  (+7 more)
src/: consumer_loop.py  create_schema_from_fake.py  create_schema_from_file.py  nazare_pipeline_create.py  nazare_pipeline_delete.py  pandas_http_fake.py  pandas_http_file.py  post_fake.py  post_file.py  predict_schema_file.py  produce_fake.py  produce_fake_old.py  produce_file.py  produce_perf.py  publish_fake.py  publish_file.py  redpanda_http_fake.py  redpanda_http_file.py  subscriber_loop.py  update_meta.py  update_meta_fake.py  update_meta_file.py  utils.py
tests/: test_fake_config_generators.py  test_multi_edge.py  test_produce_fake_runtime.py
(+26 files in other folders)
